--- a/style.css
+++ b/style.css
@@ -1,84 +1,58 @@
-*{
-    float: left;
-    box-sizing: border-box;
-    color: grey;
-    font-size: large;
-    text-align: center;
-    background-color: grey;
-}
-header {
-  
-    background-color:#ebebeb;
-    padding-top: 25px;
-    padding-bottom: 25px;
+body {
     width: 960px;
-    margin-top: 5px;
-
-  
-}
-body{
-    font-family: Arial, Helvetica, sans-serif;
-    color: #777;
-    width:  960px;
+    margin: auto;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-size: 18px;
-}
-nav{
-    
-    background-color: white;
-    padding-top: 25px;
-    padding-bottom: 25px;
-    width: 960px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-   
-    
-}
-section{
-    float: left;
-    background-color: white;
-    padding-top: 25px;
-    padding-bottom: 20px;
-    clear: both;
-    overflow: auto;
-    width: 495px;
+    line-height: 34px;
+    color: #777777;
+    background: #777777;
+  }
   
-}
-article{
-margin-top: 20px;
-color:#ebebeb;
-background-color: #777;
-padding-top: 15px;
-width: 90%;
-margin-left: 5%;
-clear: both;
-overflow: auto;
-
-
-}
-h1,p{
-    width: inherit;
-    margin-left: inherit;
-    padding: 15px;
-    background-color:#ebebeb;
-    color: #777
-}
-
-aside{
-margin-left: 10px;
-float: left;
-background-color: #ebebeb;
-width: 455px;
-padding-top: 25px;
-padding-bottom: 250px;
-}
-footer{
-    width: 960px;
-    background-color: #ebebeb;
+  header,
+  nav,
+  section,
+  aside,
+  footer {
+    display: block;
+    padding: 10px;
+    margin: 10px;
+    text-align: center;
+    background: #ebebeb;
+  }
+  
+  section {
+    display: block;
     float: left;
-    background-color:#ebebeb;
-    padding-top: 25px;
-    padding-bottom: 25px;
-    width: 960px;
-    margin-top: 10px;
-    
-}
+    width: 495px;
+    height: 267px;
+    overflow: hidden;
+  }
+  
+  aside {
+    display: block;
+    float: right;
+    width: 40%;
+    height: 267px;
+    overflow: hidden;
+  }
+  
+  article {
+    padding: 10px;
+    color: #ebebeb;
+    background: #777777;
+  }
+  
+  .clear {
+    clear: both;
+  }
+  
+  h1,
+  p {
+    width: 90%;
+    padding: 10px;
+    margin: 10px;
+    color: #777777;
+    text-align: center;
+    background: #ebebeb;
+  }
+  
